--- a/style.css
+++ b/style.css
@@ -298,3 +298,10 @@ input[type="checkbox"]:checked+label::after{
     color: white;
     left: 15px;
 }
+#Viewer{
+    width: 100%;
+    height: 100%;
+}
+#texture{
+    display: none;
+}
